--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wljs-graphics-d3",
   "version": "0.0.1",
-  "description": "A D3 & Plotly.js implementation of Mathematica's Graphics",
+  "description": "D3 implementation of Mathematica's Graphics",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
     "watch": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs -w"
@@ -25,12 +25,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@types/dat.gui": "^0.7.7",
     "d3": "^7.8.2",
     "d3-interpolate-path": "^2.3.0",
-    "plotly.js": "^2.13.1",
-    "plotly.js-dist": "^2.18.2",
-    "plotly.js-dist-min": "^2.18.2",
     "rollup": "^3.20.6",
     "rollup-plugin-combine": "^2.1.1",
     "serve-static": "^1.14.1",
