--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "wljs-meta": {
     "jsmodule": "dist/kernel.js",
     "wlkernel": "src/kernel.wl",
+    "styles": "src/styles.css",
     "autocomplete": "src/autocomplete.js"
   },
   "repository": {
