--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "defaultPackage": true,
   "wljs-meta": {
-    "jsmodule": "dist/kernel.js",
-    "wlkernel": "src/kernel.wl",
+    "js": "dist/kernel.js",
     "styles": "src/styles.css",
     "autocomplete": "src/autocomplete.js"
   },
@@ -31,6 +30,7 @@
     "d3": "^7.8.2",
     "d3-arrow": "^0.0.25",
     "d3-interpolate-path": "^2.3.0",
+    "dat.gui": "^0.7.9",
     "rollup": "^3.20.6",
     "rollup-plugin-combine": "^2.1.1",
     "serve-static": "^1.14.1",
