--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "wljs-graphics-d3",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "D3 implementation of Mathematica's Graphics",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
     "watch": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs -w",
-    "restore": "mkdir _temp && cd _temp && git clone https://github.com/JerryI/wljs-graphics-d3 && mv wljs-graphics-d3/.git ../.git && cd .. && rm -rf _temp"
+    "restore": "mkdir _temp && cd _temp && git clone --branch dev https://github.com/JerryI/wljs-graphics-d3 && mv wljs-graphics-d3/.git ../.git && cd .. && rm -rf _temp"
   },
   "defaultPackage": true,
   "wljs-meta": {
